k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-deployment
  template:
    metadata:
      labels:
        app: fastapi-deployment
    spec:
      serviceAccountName: fastapi-service-account  
      containers:
        - name: fastapi-container
          image: harbeylefty17/fastapi-service   
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
      terminationGracePeriodSeconds: 30
