k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: fastapi-app
spec:
  selector:
    app: fastapi-deployment  # route traffic to pods with this label. 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      # nodePort: 30010
  type: LoadBalancer
